--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&family=Varela+Round&display=swap");
 * {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Varela Round", sans-serif;
 }
 body {
   margin: 0;
